# gmp

./: ChangeLog  Changes  DESCRIPTION  INDEX  MD5  NAMESPACE  TODO  cleanup  configure  configure.ac  configure.in
R/: Stirling-n-etc.R  biginteger.R  bigq.R  gmp.R  matrix-prods.R  matrixq.R  matrixz.R  zzz.R
data/: Oakley1.R  Oakley1.rda  Oakley2.R  Oakley2.rda
inst/doc/: files.html  globals.html  globals_func.html  globals_vars.html  gmpR_8c.html  index.html
man/: Oakley.Rd  Stirling.Rd  add.biginteger.Rd  apply.Rd  asNumeric.Rd  biginteger.Rd  biginteger.rand.Rd  bigrational.Rd  comp.biginteger.Rd  comp.bigq.Rd  cumsum.Rd  extract.Rd  extract.bigq.Rd  extreme.Rd  factor.Rd  factorialZ.Rd  fibonacci.Rd  frexpZ.Rd  gcd.Rd  gcdex.Rd  gmp.add.Rd  gmp.gcd.Rd  gmp.inv.Rd  gmp.rand.Rd  isprime.Rd  isprimeprob.Rd  matrix.Rd  modulus.Rd  mpfr.Rd  nextprime.Rd  operators_bigq.Rd  powm.Rd  sizeinbase.Rd  solve.Rd
src/: Makevars.in  Makevars.win  Rgmp.h  TODO  apply.cc  biginteger.cc  biginteger.h  bigintegerR.cc  bigintegerR.h  biginteger_operator.cc  bigmod.cc  bigmod.h  bigrational.cc  bigrational.h  bigrationalR.cc  bigrationalR.h  bigrational_operator.cc  bigvec.cc  bigvec.h  bigvec_q.cc  bigvec_q.h  extract_matrix.cc  extract_matrix.h  factor.cc  factor.h  factorize.cc  gmpR.c  init.cc  matrix.cc  matrix.h  matrixq.cc  matrixq.h  solve.cc  solve.h  templateMatrix.h
tests/: arith-ex.R  basic-ex.R  gmp-test.R  gmp-test.Rout.save
